# DsjInc

./: CMakeLists.txt  README.md
basf/: dsjinc.cc  dsjinc.h
dataobj/: Makefile  ds_mcevt.h  dsjinc_evt.cc  dsjinc_evt.h  dsjinc_evt_dict.cc  dsjinc_evt_dict.h  dsjinc_evt_dict_rdict.pcm  dsjinc_mcevt.h
include/: ds_evt.h  ds_mcevt.h  dsjinc_evt.h  dsjinc_evt_dict.cc  dsjinc_evt_dict_rdict.pcm  dsjinc_mcevt.h
py/: GenEvtGraph.py  GenHepAnalyzer.py  ModeSplitter.py  Multiplicity.py  backup.py  edaSigMC.py  exploreData.py  log.txt  logcheck.py  lvect.py  massFit.py  mctruth.npy  pdgcode.py  plots.py  selections.py  sigMC.py  test.root  vars.py
src/: ds_evt.cc  ds_mcevt.cc  dsjinc.cc  dsjinc_evt.cc  dsjinc_evt_dict.cc  dsjinc_mcevt.cc
submit/: FileManager.py  GenSkim.csh  LumiAnalyzer.py  ScriptMaker.py  test.py
